# axum-login

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  askama.toml  docker-compose.yml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: rust.yml
axum-login/: Cargo.toml  example-permissions.db  example-sqlite.db
axum-login-libsql/: Cargo.toml
axum-login-libsql/src/: errors.rs  lib.rs  tests.rs
axum-login-tests/: Cargo.toml
axum-login-tests/migrations/: 001_create_users_table.sql
axum-login-tests/tests/: lib.rs  mongodb_store_tests.rs  sqlx_store.rs  sqlx_store_tests.rs
axum-login-tests/tests/fixtures/: users.sql
axum-login/src/: auth.rs  auth_user.rs  backend.rs  diesel_store.rs  extract.rs  extractors.rs  lib.rs  memory_store.rs  middleware.rs  middleware_builder.rs  mongodb_store.rs  redis_store.rs  rusqlite_store.rs  service.rs  session.rs  sqlx_store.rs  user_store.rs
axum-login/src/require/: fallback.rs  handler.rs  layer.rs  mod.rs  service.rs
axum-login/src/require/builder/: mod.rs  params.rs  tests.rs
axum-login/tests/: integration-test.rs
coverage/: lcov.info
examples/: README.md  example.db  sqlite-store.rs  sqlite.rs
examples/login-with-role/: Cargo.toml
examples/login-with-role/src/: main.rs
examples/memory/: Cargo.toml
examples/memory/src/: main.rs
examples/multi-auth/: Cargo.toml
examples/multi-auth/migrations/: 20231108213118_init.sql
examples/multi-auth/src/: users.rs  web.rs
examples/multi-auth/src/web/: app.rs  auth.rs  oauth.rs  protected.rs
examples/multi-auth/templates/: login.html
examples/oauth/: .env.example  Cargo.toml  user_store.db
examples/oauth/src/: main.rs
examples/oauth2/: .env.example  Cargo.toml
examples/oauth2/migrations/: 20231108213118_init.sql
examples/oauth2/src/: main.rs  users.rs  web.rs
examples/oauth2/src/web/: app.rs  auth.rs  oauth.rs  protected.rs
examples/oauth2/templates/: login.html
examples/password-and-token/: Cargo.toml
examples/password-and-token/src/: main.rs
examples/permissions/: Cargo.toml
examples/permissions/migrations/: 20231108213118_init.sql
examples/permissions/src/: main.rs  users.rs  web.rs
examples/permissions/src/web/: app.rs  auth.rs  protected.rs  restricted.rs
examples/permissions/templates/: login.html  protected.html  restricted.html
examples/postgres/: Cargo.toml
examples/postgres/migrations/: 20240326193508_init.sql
examples/postgres/sqlite/src/: main.rs  test.rs  web.rs
examples/postgres/sqlite/src/web/: app.rs  auth.rs
examples/postgres/sqlite/templates/: login.html
examples/postgres/src/: main.rs  test.rs  users.rs
examples/postgres/src/web/: app.rs  auth.rs
examples/simple-with-role/: Cargo.toml
examples/simple-with-role/src/: main.rs
examples/sqlite/: Cargo.toml
examples/sqlite/src/: main.rs  test.rs  users.rs  web.rs
examples/sqlite/src/web/: app.rs  auth.rs  protected.rs
examples/sqlite/templates/: protected.html
examples/templates/: login.html  protected.html
src/: access_controller.rs  auth.rs  auth_state.rs  auth_user.rs  backend.rs  extract.rs  extractors.rs  lib.rs  login_session.rs  memory_store.rs  middleware.rs  postgres_store.rs  require_auth.rs  service.rs  session.rs  sqlite_store.rs  sqlx_store.rs  user_store.rs
src/sqlx_store/: sqlite_store.rs
tests/: integration-test.rs
