[package]
name = "axum-login"
version = "0.7.0"
description = "🪪 User identification, authentication, and authorization for Axum."
edition = "2021"
homepage = "https://github.com/maxcountryman/axum-login"
license = "MIT"
keywords = ["authentication", "authorization", "login", "axum", "sessions"]
categories = [
    "web-programming::http-server",
    "web-programming",
    "database",
    "asynchronous",
]
repository = "https://github.com/maxcountryman/axum-login"
documentation = "https://docs.rs/axum-login"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1.57"
axum = { version = "0.6.20", default-features = false }
http = "0.2.9"
ring = "0.17.5"
serde = "1"
thiserror = "1.0.49"
tower-cookies = "0.9.0"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-sessions = "0.4.1"
tracing = { version = "0.1.40", features = ["log"] }
urlencoding = "2.1.3"

[dev-dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.20"
hyper = "0.14.27"
password-auth = "1.0.0"
reqwest = { version = "0.11.22", features = ["cookies"] }
sqlx = { version = "0.7.2", features = ["sqlite", "time", "runtime-tokio"] }
time = "0.3.30"
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
tower = "0.4.13"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[example]]
name = "sqlite"
