[package]
edition = "2021"
name = "axum-login-libsql"
version = "0.1.0"

[dependencies]
async-trait = "0.1.72"
axum-login = {path = "../axum-login/" }

[dependencies.libsql-client]
branch = "chore/dep-up"
default-features = false
features = ["reqwest", "reqwest_backend", "local_backend", "http"]
git = "https://github.com/Suyashtnt/libsql-client-rs"

[dev-dependencies]
once_cell = "1.18.0"
tokio = { version = "1.29.1", features = ["macros"] }
