[package]
name = "axum_login_tests"
version = "0.4.1"
description = "🪪 Session-based user authentication for Axum."
edition = "2021"
homepage = "https://github.com/maxcountryman/axum-login"
license = "MIT"
repository = "https://github.com/maxcountryman/axum-login"
documentation = "https://docs.rs/axum-login"
publish = false

[dependencies]
axum-login = { path = "../axum-login", features = [
    "sqlx",
    "mssql",
    "mysql",
    "postgres",
    "sqlite",
    "mongodb",
] }
sqlx = { version = "0.6" }
mongodb = { version = "2.5" }
serde = { version = "1.0.163" }
tokio = { version = "1", features = ["macros"], default-features = false }

[features]
mysql = ["axum-login/mysql"]
postgres = ["axum-login/postgres"]
sqlite = ["axum-login/sqlite"]
sqlx = ["axum-login/sqlx"]
mongodb = ["axum-login/mongodb"]

# not supported by [sqlx::test]
# https://github.com/launchbadge/sqlx/discussions/1616
# mssql = ["axum-login/mssql"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
