[package]
name = "axum-login"
version = "0.18.0"
description = "🪪 User identification, authentication, and authorization for Axum."
edition = "2021"
homepage = "https://github.com/maxcountryman/axum-login"
license = "MIT"
keywords = ["authentication", "authorization", "login", "axum", "sessions"]
categories = [
  "web-programming::http-server",
  "web-programming",
  "database",
  "asynchronous",
]
repository = "https://github.com/maxcountryman/axum-login"
documentation = "https://docs.rs/axum-login"
readme = "../README.md"

[dependencies]
axum = { version = "0.8.1", default-features = false, features = [
  "original-uri",
] }
subtle = "2.5.0"
serde = "1"
thiserror = "2.0.0"
tower-cookies = "0.11.0"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-sessions = { version = "0.14.0", default-features = false }
tokio = { version = "1.46.1", default-features = false, features = ["sync"] }
tracing = { version = "0.1.40", features = ["log"] }
urlencoding = "2.1.3"
form_urlencoded = "1.2.1"

[dev-dependencies]
axum = "0.8.1"
mockall = "0.13"
reqwest = { version = "0.12", features = ["cookies"] }
serial_test = "3.0.0"
time = "0.3.36"
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
tower = "0.5.2"
tower-sessions = { version = "0.14.0", features = ["memory-store"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
