[package]
name = "example-oauth2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.74"
axum = "0.7.1"
axum-login = { path = "../../axum-login" }
dotenvy = "0.15.7"
http = "1.0.0"
hyper = "1.0.1"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1"
sqlx = { version = "0.8.1", features = ["sqlite", "time", "runtime-tokio"] }
thiserror = "1.0.50"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
