[package]
name = "example-permissions"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.14.0" }
axum = "0.8.1"
axum-login = { path = "../../axum-login" }
http = "1.0.0"
hyper = "1.0.1"
password-auth = "1.0.0"
serde = "1"
sqlx = { version = "0.8.1", features = ["sqlite", "time", "runtime-tokio"] }
thiserror = "2.0.0"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.5.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = { version = "0.14.0", features = ["memory-store"] }
