[package]
name = "example-sqlite"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.74"
axum = "0.7.0"
axum-login = { path = "../../axum-login" }
axum-messages = "0.6.0"
http = "1.0.0"
hyper = "1.0.1"
password-auth = "1.0.0"
serde = "1"
sqlx = { version = "0.7.3", features = ["sqlite", "time", "runtime-tokio"] }
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = { version = "0.12.0", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
thiserror = "1.0.56"
