[package]
name = "example-sqlite"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.12.1" }
axum = "0.8.1"
axum-login = { path = "../../axum-login" }
axum-messages = "0.8.0"
http = "1.0.0"
hyper = "1.0.1"
password-auth = "1.0.0"
serde = "1"
sqlx = { version = "0.8.1", features = ["sqlite", "time", "runtime-tokio"] }
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.5.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = { version = "0.14.0", default-features = false, features = [
  "signed",
] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
thiserror = "2.0.0"
